--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: 1.17
 
       - name: Test
-        run: go test -race -covermode=atomic -coverprofile=coverage.out -v `go list ./... | grep -v ./example`
+        run: go test -race -covermode=atomic -coverprofile=coverage.out -v `go list ./... | grep -v './example|./cmd'`
 
       - name: Install goveralls
         run: go install github.com/mattn/goveralls@latest
